--- a/src/app/videoes/video-list/video-list.component.html
+++ b/src/app/videoes/video-list/video-list.component.html
@@ -1,5 +1,38 @@
-<h1>Videoes</h1>
-<app-video
-  (click)="details(video)"
-  *ngFor="let video of videoes" [video]="video"></app-video>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <hr>
+    <h2>Videoes</h2>
+      <hr>
+    </div>
+  <div class="col-md-12">
+    <div class="list-group">
+      <div (click)="details(video)" *ngFor="let video of videoes" class="list-group-item list-group-item-action">
+        <img class="rounded float-left img" src="http://via.placeholder.com/64x64">
+      <h5>
+        {{video.title}}
+      </h5>
+        <div *ngIf="!videoToDelete || videoToDelete.id != video.id" class="pull-right">
+          <button class="btn btn-outline-danger" (click)="delete(video, $event)">
+            <i class="fa fa-trash" aria-hidden="true"></i>
+          </button>
+          <button class="btn btn-outline-info">
+            <i class="fa fa-refresh" aria-hidden="true"></i>
+          </button>
+        </div>
+        <div *ngIf="videoToDelete && videoToDelete.id == video.id" class="pull-right">
+          <button class="btn btn-outline-danger" (click)="deleteConfirmed($event)">
+            <i class="fa fa-trash" aria-hidden="true"></i>
+            Sure?
+          </button>
+          <button class="btn btn-outline-warning" (click)="deleteAborted($event)">
+            <i class="fa fa-ban" aria-hidden="true"></i>
+            Cancel
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+</div>
 
