--- a/src/app/videoes/video-list/video-list.component.html
+++ b/src/app/videoes/video-list/video-list.component.html
@@ -2,7 +2,14 @@
   <div class="row">
     <div class="col-md-12">
       <hr>
-    <h2>Videoes</h2>
+    <h2>
+      Videoes
+      <div class="pull-right">
+        <button class="btn btn-outline-success" (click)="createVideo()">
+          <i class="fa fa-plus" aria-hidden="true"></i>
+        </button>
+      </div>
+    </h2>
       <hr>
     </div>
   <div class="col-md-12">
