--- a/src/app/videoes/video-create/video-create.component.html
+++ b/src/app/videoes/video-create/video-create.component.html
@@ -72,7 +72,7 @@
             Genres:
             <div class="card">
               <div class="card-body">
-                <app-genre-list>
+                <app-genre-list [genres]="genresInput">
 
                 </app-genre-list>
               </div>
