--- a/src/app/genre/genre-list/genre-list.component.html
+++ b/src/app/genre/genre-list/genre-list.component.html
@@ -1,9 +1,11 @@
 <ul class="list-group">
-  <li class="list-group-item" *ngFor="let genre of genres">
+  <li class="list-group-item"
+      *ngFor="let genre of genres; let i = index">
     <i class="fa fa-file-video-o" aria-hidden="true"></i>
     {{genre.name}}
     <div class="pull-right">
-      <button class="btn btn-outline-danger">
+      <button (click)="delete(i, $event)"
+              class="btn btn-outline-danger">
         <i class="fa fa-trash" aria-hidden="true"></i>
       </button>
       <button class="btn btn-outline-secondary">
@@ -13,7 +15,7 @@
   </li>
 </ul>
 <hr>
-<form [formGroup]="genreGroup">
+<form [formGroup]="genreGroup" (submit)="saveGenre()">
   <div class="form-group">
     <label class="center-block">
       New Genre:
