--- a/src/app/genre/genre-list/genre-list.component.html
+++ b/src/app/genre/genre-list/genre-list.component.html
@@ -1,4 +1,5 @@
-<ul class="list-group">
+<p *ngIf="!genres || genres.length == 0">No genres available...</p>
+<ul class="list-group" *ngIf="genres && genres.length > 0">
   <li class="list-group-item"
       *ngFor="let genre of genres; let i = index">
     <i class="fa fa-file-video-o" aria-hidden="true"></i>
